--- a/index.html
+++ b/index.html
@@ -13,7 +13,106 @@
 </head>
 
 <body>
-	<h1>Howdy FED2425</h1>
+	<head>
+		<nav>
+			<a>Menu</a>
+			<a>Search</a>
+			<a>Louis Vuitton</a>
+			<a>Contact Us</a>
+		</nav>
+		<section>
+			<h2>Exclusive Prelaunch: Neverfull Inside Out</h2>
+			<a href="https://en.louisvuitton.com/eng-nl/stories/neverfull-inside-out">Discover the reversible edition</a>
+			<img src="images/homepage_header.jpg" alt="A picture of a bag from the Masion's collection">
+		</section>
+	</head>
+	<section>
+		<h2>Explore a Selection of the Masion's Creations</h2>
+		<ul>
+			<li>
+				<h3>Woman's Handbags</h3>
+				<img src="images/maison-collection/womans-handbag.jpg" alt="Picture of a small leather womans bag">
+			</li>
+			<li>
+				<h3>Womans's Wallets and Small Leather Goods</h3>
+				<img src="images/maison-collection/womans-wallet.jpg" alt="Picture of wallets and small leather goods">
+			</li>
+			<li>
+				<h3>Womans Fashion Jewelry</h3>
+				<img src="images/maison-collection/womans-jewelry.jpg" alt="Picture of womans jewelry">
+			</li>
+			<li>
+				<h3>Stationnery</h3>
+				<img src="images/maison-collection/stationnery.jpg" alt="Picture of stattionery items">
+			</li>
+			<li>
+				<h3>Men's Bags</h3>
+				<img src="images/maison-collection/mens-bag.jpg" alt="Picture of a mens bag">
+			</li>
+			<li>
+				<h3>Men's Accessories</h3>
+				<img src="images/maison-collection/perfumes.jpg" alt="Picture of a parfume">
+			</li>
+			<li>
+				<h3>Men's Shoes</h3>
+				<img src="images/maison-collection/mens-shoes.jpg" alt="Picture of a par of mens shoes">
+			</li>
+		</ul>
+	</section>	
+
+	<section>
+		<p>MEN</p>
+		<h2>LV Fall</h2>
+		<a href="https://en.louisvuitton.com/eng-nl/women/handbags/monogram-signature/_/N-t1ci1i32">Discover the Collection</a>
+		<img src="images/lv-fall/lv-fall-header.jpg" alt="4 models in fall collection clothes from lv">
+		<ul>
+			<li>
+				<h3>Leather Patch Fleece Blouson</h3>
+				<p>1700,00€</p>
+				<img src="images/lv-fall/leather-patch-flee.jpg" alt="Picture of a jacket from fleece and leather patches">
+			</li>
+			<li>
+				<h3>Keepal Bandouliére 25</h3>
+				<p>2200,00€</p>
+				<img src="images/lv-fall/small-duffel.jpg" alt="Small darkgreen duffelbag">
+			</li>
+			<li>
+				<h3>LV Trainer Sneaker</h3>
+				<p>1080,00</p>
+				<img src="images/lv-fall/trainer-sneaker.jpg" alt="A pair of black trainers">
+			</li>
+		</ul>
+		</section>
+
+		<section>
+			<h2>Louis Vuitton Services</h2>
+			<p>Louis Vuitton offers complementary wrapping on all orders,
+			carfully packaged in the Maison's iconic boxes.
+			</p>
+			<ul>
+				<li>
+					<h3>Services</h3>
+					<img src="images/services/services.jpg" alt="picture of gifts balancing on a ball">
+					<a href="https://en.louisvuitton.com/eng-nl/contact-us">Contact us</a>
+				</li>
+				<li>
+					<h3>Art of Gifitng</h3>
+					<img src="images/services/gifting.jpg" alt="Gifts in LV packaging">
+					<a href="https://en.louisvuitton.com/eng-nl/gifts/gifts-for-her/_/N-t19wefl6">Gifts for Her</a>
+					<a href="https://en.louisvuitton.com/eng-nl/gifts/gifts-for-him/_/N-t143cszt">Gifts for Him</a>
+				</li>
+				<li>
+					<h3>Personalisation</h3>
+					<img src="images/services/personalization.jpg" alt="small bag">
+					<a href="https://en.louisvuitton.com/eng-nl/stories/personalization">Learn More</a>
+				</li>
+			</ul>
+		</section>
+
+	<footer>
+		
+	</footer>	
+
 
 	<script defer src="scripts/script.js"></script>
 </body>
