--- a/index.html
+++ b/index.html
@@ -1,31 +1,70 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 	
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2425</title>
+	<title>Louis Vuitton Homepage</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<head>
-		<nav>
-			<a>Menu</a>
-			<a>Search</a>
-			<a>Louis Vuitton</a>
-			<a>Contact Us</a>
-		</nav>
+	<header>
+		<h1>Louis Vuitton</h1>
+		<button aria-hidden="true">
+			<img src="images/header/menu.svg" alt="This is a image of a hamburger menu"/>
+		</button>
+
+		<button>
+			<img src="images/header/search.svg" alt="This is a image of a magnifying glass"/>
+		</button>
+
+		<a aria-hidden="true" href="https://account.louisvuitton.com/eng-nl/mylv/login?response-code=code&client-id=3MVG9A2kN3Bn17hvoqxK.akVTLUK1CtKpvdV2sbka7X4qecgMbRWXoXSWJ12evrTNYvAXbVbuVnC1QT36uOfu&state=OTQzZTNiNTkzYzM4NDMxNTk2MDIyNWUxM2FjNjg5Zjk0OWQ4ZGExZDZlMGM0ODAzYTZiZDAzNmE3ZmNjZWJkMS9lbmctbmw%3D&code-challenge=tLnP22hDCKypBVdzZsn3YFYt95v58bzf7jzE5iM26Wc&redirect-uri=https%3A%2F%2Fapi.louisvuitton.com%2Feco-eu%2Flvcom-tkn-handlr-eapi%2Fv1%2Fcallback&error_redirect_url=https%3A%2F%2Fapi.louisvuitton.com%2Feng-nl%2Fmylv%2Ferror">
+			<img src="images/header/user.svg" alt="This is a image of a user icon"/>
+		</a>
+		<a aria-hidden="true"></a>
+			<img src="images/header/shopping-bag.svg" alt="This is a image of a shopping bag"/>
+		</a>
+
+	</header>
+
+	<nav>
+		<button aria-hidden="true">
+			<img src="images/header/x.svg" alt="This is a image of a cross to close the menu" />
+		</button>
+		<ul>
+		<li>Gifts</li>
+		<li>New</li>
+		<li>Bags and Small Leather Goods</li>
+		<li>Women</li>
+		<li>Men</li>
+		<li>Jewelry</li>
+		<li>Watches</li>
+		<li>Perfumes</li>
+		<li>Trunks, Travel and Home</li>
+		<li>Services</li>
+		<li>The Maison Louis Vuitton</li>
+		</ul>
+	</nav>
+
+	<form>
+		<label for="search">
+			<img src="images/header/search.svg" alt="This is a image of a magnifying glass"/>
+		</label>
+		<input id="search" type="search" placeholder="Dure tassen">
+		<button>Zoeken</button>
+	</form>
+
+	<main>
 		<section>
 			<h2>Exclusive Prelaunch: Neverfull Inside Out</h2>
 			<a href="https://en.louisvuitton.com/eng-nl/stories/neverfull-inside-out">Discover the reversible edition</a>
 			<img src="images/homepage_header.jpg" alt="A picture of a bag from the Masion's collection">
 		</section>
-	</head>
 	<section>
 		<h2>Explore a Selection of the Masion's Creations</h2>
 		<ul>
@@ -108,9 +147,10 @@
 				</li>
 			</ul>
 		</section>
+	</main>
 
 	<footer>
-		
+
 	</footer>	
 
 
