--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 				<img src="images/maison-collection/womans-handbag.jpg" alt="Picture of a small leather womans bag">
 			</li>
 			<li>
-				<h3>Womans's Wallets and Small Leather Goods</h3>
+				<h3>Womans's Wallets</h3>
 				<img src="images/maison-collection/womans-wallet.jpg" alt="Picture of wallets and small leather goods">
 			</li>
 			<li>
-				<h3>Womans Fashion Jewelry</h3>
+				<h3>Womans Jewelry</h3>
 				<img src="images/maison-collection/womans-jewelry.jpg" alt="Picture of womans jewelry">
 			</li>
 			<li>
@@ -106,18 +106,18 @@
 		<img src="images/lv-fall/lv-fall-header.jpg" alt="4 models in fall collection clothes from lv">
 		<ul>
 			<li>
-				<h3>Leather Patch Fleece Blouson</h3>
 				<p>1700,00€</p>
+				<h3>Leather Fleece Blouson</h3>
 				<img src="images/lv-fall/leather-patch-flee.jpg" alt="Picture of a jacket from fleece and leather patches">
 			</li>
 			<li>
-				<h3>Keepal Bandouliére 25</h3>
 				<p>2200,00€</p>
+				<h3>Keepal Bandouliére 25</h3>
 				<img src="images/lv-fall/small-duffel.jpg" alt="Small darkgreen duffelbag">
 			</li>
 			<li>
-				<h3>LV Trainer Sneaker</h3>
 				<p>1080,00</p>
+				<h3>LV Trainer Sneaker</h3>
 				<img src="images/lv-fall/trainer-sneaker.jpg" alt="A pair of black trainers">
 			</li>
 		</ul>
