--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Safira Kwyasse">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Louis Vuitton Homepage</title>
+	<title>Louis Vuitton | Homepage</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
@@ -26,7 +26,7 @@
 		<a aria-hidden="true" href="https://account.louisvuitton.com/eng-nl/mylv/login?response-code=code&client-id=3MVG9A2kN3Bn17hvoqxK.akVTLUK1CtKpvdV2sbka7X4qecgMbRWXoXSWJ12evrTNYvAXbVbuVnC1QT36uOfu&state=OTQzZTNiNTkzYzM4NDMxNTk2MDIyNWUxM2FjNjg5Zjk0OWQ4ZGExZDZlMGM0ODAzYTZiZDAzNmE3ZmNjZWJkMS9lbmctbmw%3D&code-challenge=tLnP22hDCKypBVdzZsn3YFYt95v58bzf7jzE5iM26Wc&redirect-uri=https%3A%2F%2Fapi.louisvuitton.com%2Feco-eu%2Flvcom-tkn-handlr-eapi%2Fv1%2Fcallback&error_redirect_url=https%3A%2F%2Fapi.louisvuitton.com%2Feng-nl%2Fmylv%2Ferror">
 			<img src="images/header/user.svg" alt="This is a image of a user icon"/>
 		</a>
-		<a aria-hidden="true"></a>
+		<a aria-hidden="true">
 			<img src="images/header/shopping-bag.svg" alt="This is a image of a shopping bag"/>
 		</a>
 
@@ -37,6 +37,7 @@
 			<img src="images/header/x.svg" alt="This is a image of a cross to close the menu" />
 		</button>
 		<ul>
+		<li aria>Home</li>	
 		<li>Gifts</li>
 		<li>New</li>
 		<li>Bags and Small Leather Goods</li>
@@ -52,11 +53,11 @@
 	</nav>
 
 	<form>
-		<label for="search">
+		<!-- <label for="search">
 			<img src="images/header/search.svg" alt="This is a image of a magnifying glass"/>
-		</label>
+		</label> -->
 		<input id="search" type="search" placeholder="Dure tassen">
-		<button>Zoeken</button>
+		<button class="visually-hidden">Zoeken</button>
 	</form>
 
 	<main>
@@ -100,14 +101,14 @@
 	</section>	
 
 	<section>
-		<p>MEN</p>
+		<h4>MEN</h4>
 		<h2>LV Fall</h2>
 		<a href="https://en.louisvuitton.com/eng-nl/women/handbags/monogram-signature/_/N-t1ci1i32">Discover the Collection</a>
 		<img src="images/lv-fall/lv-fall-header.jpg" alt="4 models in fall collection clothes from lv">
 		<ul>
 			<li>
+				<h3>Leather Fleece</h3>
 				<p>1700,00€</p>
-				<h3>Leather Fleece Blouson</h3>
 				<img src="images/lv-fall/leather-patch-flee.jpg" alt="Picture of a jacket from fleece and leather patches">
 			</li>
 			<li>
@@ -119,6 +120,11 @@
 				<p>1080,00</p>
 				<h3>LV Trainer Sneaker</h3>
 				<img src="images/lv-fall/trainer-sneaker.jpg" alt="A pair of black trainers">
+			</li>
+			<li>
+				<p>1600,00€</p>
+				<h3>1.1 Sunglasses</h3>
+				<img src="images/lv-fall/glasses.jpg" alt="Black glasses for men"> 
 			</li>
 		</ul>
 		</section>
