--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>Louis Vuitton | Homepage</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
+	<link href="styles/style2.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
@@ -91,11 +92,17 @@
 			</li>
 			<li>
 				<h3>Men's Accessories</h3>
-				<img src="images/maison-collection/perfumes.jpg" alt="Picture of a parfume">
+				<img src="images/maison-collection/mens-accessories.jpg" alt="Picture of a parfume">
 			</li>
 			<li>
+				<a href="http://127.0.0.1:5500/productpagina.html">
 				<h3>Men's Shoes</h3>
 				<img src="images/maison-collection/mens-shoes.jpg" alt="Picture of a par of mens shoes">
+				</a>
+			</li>
+			<li>
+				<h3>Men's Parfumes</h3>
+				<img src="images/maison-collection/perfumes.jpg" alt="Picture of a par of a LV parfume">
 			</li>
 		</ul>
 	</section>	
@@ -141,7 +148,7 @@
 					<a href="https://en.louisvuitton.com/eng-nl/contact-us">Contact us</a>
 				</li>
 				<li>
-					<h3>Art of Gifitng</h3>
+					<h3>Art of Gifting</h3>
 					<img src="images/services/gifting.jpg" alt="Gifts in LV packaging">
 					<a href="https://en.louisvuitton.com/eng-nl/gifts/gifts-for-her/_/N-t19wefl6">Gifts for Her</a>
 					<a href="https://en.louisvuitton.com/eng-nl/gifts/gifts-for-him/_/N-t143cszt">Gifts for Him</a>
@@ -156,11 +163,132 @@
 	</main>
 
 	<footer>
+	<section>
+		<h2>Louis Vuitton</h2>
+		<section>
+			<details>
+				<summary>
+					<h3>Help</h3>
+					<img src="images/product-pagina/plus.svg" alt="Icon of a plus, clickable">
+				</summary>		
+					<ul>
+						<li>
+							<h4>A Client Advisor is available at +31 207 219 441.</h4>
+							<h4>You can also chat or email us.</h4>
+						</li>
+						<li>
+							<h4>FAQ's</h4>
+						</li>
+						<li>
+							<h4>Product Care</h4>
+						</li>
+					</ul>
+			</details>
+		</section>
 
-	</footer>	
+		<section>
+			<details>
+				<summary>
+					<h3>Services</h3>
+						<img src="images/product-pagina/plus.svg" alt="Icon of a plus, clickable">
+				</summary>		
+					<ul>
+						<li>
+							<h4>Repair</h4>
+						</li>
+						<li>
+							<h4>Personalization</h4>
+						</li>
+						<li>
+							<h4>Art of Gifting</h4>
+						</li>
+						<li>
+							<h4>Download our Apps</h4>
+						</li>
+					</ul>
+			</details>
+		</section>
+
+		<section>
+			<details>
+				<summary>
+					<h3>About Louis Vuitton</h3>
+						<img src="images/product-pagina/plus.svg" alt="Icon of a plus, clickable">
+				</summary>		
+					<ul>
+						<li>
+							<h4>Fashion Shows</h4>
+						</li>
+						<li>
+							<h4>Art & Culture</h4>
+						</li>
+						<li>
+							<h4>La Maison</h4>
+						</li>
+						<li>
+							<h4>Sustainabilty</h4>
+						</li>
+					</ul>
+			</details>
+		</section>
+		<section>
+			<details>
+				<summary>
+					<h3>Connect</h3>
+						<img src="images/product-pagina/plus.svg" alt="Icon of a plus, clickable">
+				</summary>		
+					<ul>
+						<li>
+							<h4>Sign up for Louis Vuitton emails and receive the latest news from the Maison, including exclusive online pre-launches and new collections.</h4>
+						</li>
+						
+					</ul>
+			</details>
+		</section>
+			<ul>
+				<li> 
+					<h3>Sitemap</h3>
+				</li>
+				<li>
+					<h3>Legal & Privacy</h3>
+				</li>
+				<li>
+					<h3>Cookies</h3>
+				</li>
+			</ul>
+	</section>
+	</footer>
 
 
 	<script defer src="scripts/script.js"></script>
-</body>
-	
+</body>	
 </html>
+
+<!-- <ul>
+	<li>
+		<h3>Help</h3>
+		<img src="images/product-pagina/plus.svg" alt="Icon of a plus, when clicking section folds out">
+	</li>
+	<li> 
+		<h3>Services</h3>
+		<img src="images/product-pagina/plus.svg" alt="Icon of a plus, when clicking section folds out">
+	</li>
+	<li>
+		<h3>About Louis Vuitton</h3>
+		<img src="images/product-pagina/plus.svg" alt="Icon of a plus, when clicking section folds out">
+	</li>
+	<li>
+		 <h3>Connect</h3>
+		 <img src="images/product-pagina/plus.svg" alt="Icon of a plus, when clicking section folds out">
+	</li>
+</ul> -->
+
+<!-- <ul>
+			<li>
+				<a href="https://www.louisvuitton.com/dispatch?noDRP=true">
+					<p>Ship to:</p>
+					<img src="images/netherlands.png" alt="icon of the flag of the netherlands">
+					<p>Netherlands</p>
+				</a>
+			</li>
+		</ul> -->
