--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<header>
 		<h1>Louis Vuitton</h1>
 		<button aria-hidden="true">
-			<img src="images/header/menu.svg" alt="This is a image of a hamburger menu"/>
+			<!-- <img src="images/header/menu.svg" alt="This is a image of a hamburger menu"/> -->
+			 <span></span><span></span><span></span>
 		</button>
 
 		<button>
@@ -34,9 +35,9 @@
 	</header>
 
 	<nav>
-		<button aria-hidden="true">
+		<!-- <button aria-hidden="true">
 			<img src="images/header/x.svg" alt="This is a image of a cross to close the menu" />
-		</button>
+		</button> -->
 		<ul>
 		<li aria>Home</li>	
 		<li>Gifts</li>
@@ -156,7 +157,7 @@
 				<li>
 					<h3>Personalisation</h3>
 					<img src="images/services/personalization.jpg" alt="small bag">
-					<a href="https://en.louisvuitton.com/eng-nl/stories/personalization">Learn More</a>
+					<a aria-label="More about Personalisation" href="https://en.louisvuitton.com/eng-nl/stories/personalization">Learn More</a>
 				</li>
 			</ul>
 		</section>
