--- a/productpagina.html
+++ b/productpagina.html
@@ -32,9 +32,9 @@
 	</header>
 
 	<nav>
-		<button aria-hidden="true">
+		<!-- <button aria-hidden="true">
 			<img src="images/header/x.svg" alt="This is a image of a cross to close the menu" />
-		</button>
+		</button> -->
 		<ul>
 			<li aria>Home</li>
 			<li>Gifts</li>
